--- a/npactweb/npactweb/templates/about.html
+++ b/npactweb/npactweb/templates/about.html
@@ -4,7 +4,8 @@
 
 {%block content %}
 <div class="contentPadding">
-<h2 id="secHeader" title="NPACT - About"><span><!--header image here--></span>NPACT About</h2>
+<!--<h2 id="secHeader" title="NPACT - About"><span>--><!--header image here--><!--</span>NPACT About</h2> -->
+<img src="{% url start %}devassets/images/header1.jpg" title="NPACT - About" alt="NPACT - About" style="margin:0 0 5px 8px; width:98%" />
 <p></p><h4>About</h4>
 <p>NPACT is a computational and graphical representation tool for gene identification and sequence annotation. NPACT identifies sequence segments of any length with <b>statistically-significant 3-base compositional periodicities</b> and <b>associated with ORF structures</b> (<a href="">Oden and Brocchieri 2014</a>, submitted). It uses a new quantitative approach that extends the principle of visual frame analysis (<a href="http://www.sciencedirect.com/science/article/pii/0378111984901161">Bibb et al. 1984</a>).</p>
 
