ui: first draft drawing profiles
* can specify colors via `graph-*-color` attributes
* draws in genespace, scales to fit the graph frame
* iterates over the profile once to draw all three lines
* fix some race conditions by using the right watch

refs Programming:#735 (.75)

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -17,7 +17,7 @@
   <div id="results" style="display:none;">
     <h3>Results </h3>
     <div>
-
+      <div ng-app="npact"> <div npact-graph-page ></div> </div>
       <h4>Downloads</h4>
 
       <div id="graphicalresults" class="ui-state-highlight ui-corner-all onsuccess">
@@ -47,10 +47,6 @@
             <li><a id="reconfigurelink" href="{{ reconfigure_url }}">Reconfigure it</a> and try again.</li>
             <li><a href="{% url start %}">Start Over</a></li>
           </ul>
-      </div>
-
-      <div ng-app="npact">
-	<div npact-graph-page ></div>
       </div>
     </div>
   </div>
