Wiring the frontend to the async backend
 * `npactGraphPage` directive got a lot bigger as it is starting to
   request the data from the server
 * `status` endpoint on the server just returns a True or False now
 * new endpoint `acgt_gamma_file_list` for listing the output files
   produced by the prediciton program (all in a `.predict` subdir)
 * `kickstart` endpoint actually kicks off the processing now; returns
   the config dict. We try to convert abs to rel urls on the way out
 * `processing.html` is no longer calling the old `processing.js` code,
   but kickstarting the angular, feeding it down all the urls it will
   need.

re Programming:#737 (4)

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -77,12 +77,12 @@
 
 
   <script type="text/javascript">
-    jQuery(document).ready( function(){
-        progress.init('{{statusurl}}');
-    });
-    angular.module('npact').constant('config',  JSON.parse('{{config_json}}'));
-    angular.module('npact').constant('STATUS_BASE_URL', '{{status_base}}');
-    angular.module('npact').constant('STATIC_BASE_URL', '{{STATIC_URL}}');
+    angular.module('npact')
+      .constant('STATUS_BASE_URL', '{{status_base}}')
+      .constant('KICKSTART_BASE_URL', '{{kickstart_base}}')
+      .constant('FETCH_URL', '{{fetch_base}}')
+      .constant('ACGT_GAMMA_FILE_LIST_URL', '{{acgt_gamma_base}}')
+      .constant('STATIC_BASE_URL', '{{STATIC_URL}}');
   </script>
 </div>
 
