Use ngStick to make the config box stay visible
re #849 (0.34)

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -27,5 +27,5 @@
 {%endblock content %}
 
 {%block sidebar %}
-<div npact-graph-config ></div>
+<div npact-graph-config sticky offset="50"></div>
 {%endblock sidebar %}
