Use an html5 standard header, eliminate xhtml refs
The document started life a long time ago as an xhtml document. At this
point we're only targetting modern browsers anyways, make it explitly be
a modern html5 implementation.

re #842 (0.25)

--- a/npactweb/npactweb/templates/base.html
+++ b/npactweb/npactweb/templates/base.html
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html >
 {% load media %}
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <title>{% block title %}University of Florida Genetics Institute{% endblock title %}</title>
     {% include_media 'main.css'  media='screen' %}
