--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -365,14 +365,10 @@ button.Start { clear:both; margin: 8px;}
 
 
 /* ****** For the Results page ****** */
-#graphicalresults {border:none;}
-#graphicalresults a {font-weight: bold;}
-
+#
 .ui-state-highlight { margin-top:10px; padding:10px; width:94%; }
         .ui-state-highlight p {color:#000;}
 
         .ui-state-highlight li a {font-weight:bold;}
                 #files li {color:#000;}
                 #files li:hover {color:#C60;}
-
-#tryagain {padding:8px;}
