Better html5 mode support
 * Specify the `<base href="...">`
 * Don't tell angular to ignore the lack of base href
 * Defaults becomes much simpler
 * Link to home, about, et al. works much better

re #847 (0.25)

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -4,11 +4,12 @@
 {% block title %}N-PACT - N-Profile Analysis Computational Tool{% endblock %}
 
 {% block addScript %}
+<base href="{{base_href}}">
+
 {% include_media 'jquery.js' %}
 {% include_media 'processing.js' %}
 
 {% endblock addScript %}
-
 {% block content %}
 
 <div id="progress" class="contentPadding">
