--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -227,6 +227,7 @@ position:relative;
 top:0;
 width:23%;
 }
+#leftCol #search {margin-bottom: 25px;}
 
 #priNav h2,#footer h3 {
 display:none;
@@ -373,4 +374,41 @@ button.Start { clear:both; margin: 8px;}
                 #files li {color:#000;}
                 #files li:hover {color:#C60;}
 
+#configContainer {
+  background: #F7F7F7; 
+  border-bottom: solid 4px #4059BD;
+  padding: 0px 8px 8px;
+}
+
+#configContainer h2 {
+  background: #4059BD;
+  border-bottom: solid 2px #FF4A00;
+  position: relative;
+  color: #fff; 
+  margin-bottom: 10px; 
+  margin-left: -8px;
+  margin-right: -8px;
+  padding: 3px 5px;
+}
+#configContainer h2:after { 
+  left: 100%; 
+  top: 50%; 
+  border: solid transparent; 
+  content: " "; 
+  height: 0; 
+  width: 0; 
+  position: absolute; 
+  pointer-events: none; 
+  border-color: rgba(64, 89, 189, 0); 
+  border-left-color: #4059BD; 
+  border-width: 18px;
+  margin-top: -17px; 
+  z-index: 500;
+}
 #configContainer h3 { margin-top: 10px; }
+
+#configContainer li {
+  border-bottom: solid 1px #E5E5E5;
+  margin-bottom: 5px;
+  padding-bottom: 3px;
+}
