Config panel: add padding between nucleotides
re #842 (0.1)

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -412,3 +412,5 @@ button.Start { clear:both; margin: 8px;}
   margin-bottom: 5px;
   padding-bottom: 3px;
 }
+
+#configContainer .nprofile-options label { padding-left: 8px; }
