--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -377,8 +377,12 @@ button.Start { clear:both; margin: 8px;}
 #configContainer {
   background: #F7F7F7;
   border-bottom: solid 4px #4059BD;
+  font-size: 14px;
   padding: 0px 8px 8px;
 }
+
+#configContainer div {margin-bottom: 12px;}
+#configContainer div.ng-scope {margin-bottom: 5px;}
 
 #configContainer h2 {
   background: #4059BD;
@@ -405,12 +409,36 @@ button.Start { clear:both; margin: 8px;}
   margin-top: -17px;
   z-index: 500;
 }
-#configContainer h3 { margin-top: 10px; }
+#configContainer h3 {
+  color: #4059BD;
+  font-size: 100%;
+  font-style: normal;
+  font-weight: bold;
+  padding: 4px 0px 0px 0px;
+  text-transform: uppercase;
+  margin-top: 10px;
+}
 
+#configContainer ul {padding-left: 5px;}
 #configContainer li {
   border-bottom: solid 1px #E5E5E5;
   margin-bottom: 5px;
   padding-bottom: 3px;
 }
 
-#configContainer .nprofile-options label { padding-left: 8px; }
+#configContainer input[type=checkbox] {
+  margin: 0px 4px;
+}
+.btn {
+  background: #E5E5E5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 3px 6px;
+  text-align: center;
+}
+  .btn:hover {background: #C1C1C1;}
+
+.sm-text {font-size: 10px;}
+.md-text {font-size: 14px;}
