Sketch of printing
This tries to just make every graph control render. heavy handed and not
completely working yet.

(version 2 of patch)

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -449,3 +449,6 @@ button.Start { clear:both; margin: 8px;}
    border-bottom: 1px solid #AAF;
    padding: 8px 10px 8px 0;
 }
+
+#printControls { float: right; }
+#printControls:hover { cursor: hand; }
