--- a/npactweb/npactweb/static/css/print.css
+++ b/npactweb/npactweb/static/css/print.css
@@ -1,3 +1,3 @@
 body, p, h1, h2, h3, h4, h5, h6, li  {font-family : "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif; }
 
-#header, #leftCol, #footer {display:none;}
+#header, #leftCol, #footer, #printControls {display:none;}
