Don't use processing.js; use files
This makes the JS much easier to debug in chrome. The bundle is still
defined so we might go back to that later.

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -7,7 +7,26 @@
 <base href="{{base_href}}">
 
 {% include_media 'jquery.js' %}
-{% include_media 'processing.js' %}
+
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/lodash/dist/lodash.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/qtip2/jquery.qtip.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/rtree/dist/rtree.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/ngSticky/dist/sticky.min.js"></script>
+
+<script type="text/javascript" src="{{STATIC_URL}}js/app.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/constants.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/utils.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/nprofiler.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/readers.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/page.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/calculator.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/grapher.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/graph.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/config.js"></script>
 
 {% endblock addScript %}
 {% block content %}
