Better messaging version; captures errors, prints status
Unlink the previous version this one is stylable saves all console
messages in a log(with option to email to us), and is actually used.

I added several status notifcations that go through the messagebus now;
as well as an `$exceptionHandler` so we get notified on uncaught
exceptions.

re #924 (1.5)

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -450,5 +450,8 @@ button.Start { clear:both; margin: 8px;}
    padding: 8px 10px 8px 0;
 }
 
+#msgpane p { padding: 8px; }
+#msgpane .message button { float:right; }
+
 #printControls { float: right; }
 #printControls:hover { cursor: pointer; }
