--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}js/app.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/graphs/constants.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/graphs/utils.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/messages/message.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/graphs/nprofiler.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/graphs/readers.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/graphs/page.js"></script>
