--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -8,7 +8,7 @@
 
 {% include_media 'jquery.js' %}
 
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js"></script>
