Mark scripts as defered so they can be loaded in parallel better

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -8,26 +8,25 @@
 
 {% include_media 'jquery.js' %}
 
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/lodash/lodash.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/qtip2/jquery.qtip.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/rtree/dist/rtree.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/ngSticky/dist/sticky.min.js"></script>
-
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/lodash/lodash.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/qtip2/jquery.qtip.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/rtree/dist/rtree.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/ngSticky/dist/sticky.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/app.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/constants.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/utils.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/messages/message.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/nprofiler.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/tracks.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/page.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/calculator.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/grapher.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/graph.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/graphs/config.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/constants.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/utils.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/messages/message.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/nprofiler.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/tracks.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/page.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/calculator.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/grapher.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/graph.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/graphs/config.js" defer></script>
 
 {% endblock addScript %}
 {% block content %}
