Print: popup a dialog to explain
The process is slow and hard to control, popup a dialog telling the user
what's going to happen and confirm.

re #842 (1.5)

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -455,3 +455,5 @@ button.Start { clear:both; margin: 8px;}
 
 #printControls { float: right; }
 #printControls:hover { cursor: pointer; }
+#printConfirm { display: none; }
+#printConfirm p {text-align: left; margin-top: 10px;}
