Fix ref image to use protocol relative url

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -187,7 +187,7 @@ width:550px;
 }
 
 /*\*/#footerHome span {
-background:url(http://images.webadmin.ufl.edu/signatures/UF-Signature-Themeline.gif) 0 0 no-repeat;
+background:url(//images.webadmin.ufl.edu/signatures/UF-Signature-Themeline.gif) 0 0 no-repeat;
 height:54px;
 position:absolute;
 right:0;
