Use protocol relative reference in search box

--- a/npactweb/npactweb/templates/_includes/search.html
+++ b/npactweb/npactweb/templates/_includes/search.html
@@ -1,4 +1,4 @@
-				<form action="http://search.ufl.edu/search" method="get" name="search" id="search">
+				<form action="//search.ufl.edu/search" method="get" name="search" id="search">
 		          <label for="source">
 			      <select id="source" name="source" onchange="document.getElementById('searchbox').focus()">
 				    <option value="web" selected="selected">UF Web with Google</option>
