--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/kineticjs/kinetic.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-jquery-dialog-service/dialog-service.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/lodash/lodash.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/qtip2/jquery.qtip.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/rtree/dist/rtree.min.js" defer></script>
