--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -451,5 +451,33 @@ button.Start { clear:both; margin: 8px;}
 #msgpane .message button { float:right; }
 .pointer:hover { cursor: pointer; }
 
-#printControls { float: right; }
+#printControls { float: right;}
+#printControls .btn {
+  display: inline-block; 
+  padding: 4px 10px 6px;
+}
+#printControls .ui-icon-print {margin-top: 1px;}
 #printConfirm p {text-align: left; margin-top: 10px;}
+
+
+.ui-widget-header {
+    color: #fff;
+}
+.ui-front {box-shadow: 0px 1px 8px #000;}
+.ui-front .ui-button {border:none; background: #7084D3;}
+
+/* Accordion styles */
+
+#results {padding: 5px ;}
+
+#results h3 {margin: 10px 0px 0px;}
+
+.ui-state-active, 
+.ui-widget-content 
+.ui-state-active, 
+.ui-widget-header .ui-state-active {
+    border: 1px solid #AAA;
+    background: url("/npact/devassets/css/custom-theme/images/ui-bg_flat_65_5368C1_40x100.png?version=67e7644522b42d47721f44734383a7218a6ffcfe") repeat-x scroll 50% 50% #5368C1;
+    font-weight: bold;
+    color: #fff;
+}
