Fix ref to konva.min.js
I had been using the unminified version on my computer for development
and that got accidently checked in without the unminified version being
checked in. now fixed

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -9,7 +9,7 @@
 {% include_media 'jquery.js' %}
 
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}bower_components/konva/konva.js" defer></script>
+<script type="text/javascript" src="{{STATIC_URL}}bower_components/konva/konva.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-messages/angular-messages.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-sanitize/angular-sanitize.min.js" defer></script>
 <script type="text/javascript" src="{{STATIC_URL}}bower_components/angular-jquery-dialog-service/dialog-service.js" defer></script>
