Move control panel help text into a tooltip popup.
re #972

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -341,7 +341,16 @@ ul.messages { border: 1px dotted #444; }
 
 button.Start { clear:both; margin: 8px;}
 
-.helptext {display:none;}
+.qtip-help-text {
+   display: none;
+   font-size: 1.5em;
+}
+.qtip-help-text p { padding: 5px; }
+.qtip {
+   max-width: 400px !important;
+}
+h2 span.qtip-help-icon { float: right; }
+
 
 .blue-text {color:#5368C1;}
 .orange-text {color:#FF4A00;}
