--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -450,7 +450,7 @@ h2 span.qtip-help-icon { float: right; }
 
 .graph {
    border-bottom: 2px solid #AAF;
-   padding: 8px 10px 8px 0;
+   padding: 8px 0px;
 }
 
 #msgpane p { padding: 8px; }
