Search for ORF by name
This is mostly working but still needs a bit of love on how the watcher
of starbase and endbase interact with re-searching.

re #963 (2)

--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -488,3 +488,8 @@ h2 span.qtip-help-icon { float: right; }
     font-weight: bold;
     color: #fff;
 }
+
+input.ng-invalid {
+   border: 2px red dashed !important;
+}
+button.arrowbutton { margin: 0 2px; padding: 0 2px;}
