Resize the graph container to 7in when printing
The printing was looking fairly fuzzy because the print driver was
resizing the image down to fit on the page. This resize was done after
the text was rendered so it didn't look great.

This tries to resize the image down to a space that should fit on a page
well ahead of time so that the print driver doesn't have a chance to
mess it up.

re #973

--- a/npactweb/npactweb/static/css/print.css
+++ b/npactweb/npactweb/static/css/print.css
@@ -1,6 +1,6 @@
 body, p, h1, h2, h3, h4, h5, h6, li  {font-family : "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif; }
 
-#header, #leftCol, #footer, #printControls, #predictionresults, #progressreport {display:none;}
+#header, #leftCol, #footer, #printControls, #predictionresults, #progressreport, .ui-dialog {display:none;}
 
 .graph {
    border-bottom: 2px solid #AAF;
