--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -31,8 +31,8 @@
         <div id="priNav">
           <h2>Primary Navigation</h2>
           <ul>
-            <a href="/npact">Home</a>
-            <a href="about">About</a>
+            <li><a href="/npact">Home</a></li>
+            <li><a href="about">About</a></li>
             <li><a href="http://compbio.ufl.edu/software/npact/">Downloads</a></li>
           </ul>
         </div>
