Change Script Tags
Originally, the ui was not working correctly because of missing script
tags. Also, I moved the bower component jquery because it is used in
almost all of the pages so it made sense to put it into the base template

--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom-theme/jquery-ui.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bower_components/qtip2/jquery.qtip.min.css') }}">
+    
+    <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
     {% block addScript %}{% endblock %}
   </head>
   <body ng-app="npact">
